--- a/sentinel/sentinel.vcxproj
+++ b/sentinel/sentinel.vcxproj
@@ -127,13 +127,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="command.cpp" />
     <ClCompile Include="command_dispatcher.cpp" />
-    <ClCompile Include="general_utilities.cpp" />
     <ClCompile Include="sentinel.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="colors.h" />
+    <ClInclude Include="command.h" />
     <ClInclude Include="command_dispatcher.h" />
-    <ClInclude Include="general_utilities.h" />
+    <ClInclude Include="package.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
