quickly added print funciton (not implemented in sentinel.cpp)

--- a/sentinel/sentinel.vcxproj
+++ b/sentinel/sentinel.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="colors.cpp" />
     <ClCompile Include="command_dispatcher.cpp" />
     <ClCompile Include="sentinel.cpp" />
   </ItemGroup>
