--- a/sentinel/sentinel.vcxproj
+++ b/sentinel/sentinel.vcxproj
@@ -127,12 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="colors.cpp" />
+    <ClCompile Include="console.cpp" />
     <ClCompile Include="command_dispatcher.cpp" />
     <ClCompile Include="sentinel.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="colors.h" />
+    <ClInclude Include="console.h" />
     <ClInclude Include="command_dispatcher.h" />
     <ClInclude Include="package.h" />
   </ItemGroup>
