--- a/sentinel/sentinel.vcxproj
+++ b/sentinel/sentinel.vcxproj
@@ -127,11 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="commands\exit.cpp" />
     <ClCompile Include="console.cpp" />
     <ClCompile Include="command_dispatcher.cpp" />
     <ClCompile Include="sentinel.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="commands\commands.h" />
     <ClInclude Include="console.h" />
     <ClInclude Include="command_dispatcher.h" />
     <ClInclude Include="package.h" />
