Add clear and fclear commands, update Package struct
Added declarations for `clear_command` and `fclear_command` functions in `commands.h`. Modified the `exit_command` function in `exit.cpp` to use a stylized location in its exit message. Added a new `lines` attribute to the `Package` struct in `package.h`. Updated the `main` function in `sentinel.cpp` to initialize the `lines` attribute of the `Package` instance and register the `clear` and `fclear` commands. Also added logic to increment the `lines` attribute with each command input and to continue the loop if the input is empty. Updated `sentinel.vcxproj` to include the new `clear.cpp` file in the project. Implemented the `clear_command` function in `clear.cpp` and the `fclear_command` function in `fclear.cpp` to clear the console using the `system("clear")` command.

--- a/sentinel/sentinel.vcxproj
+++ b/sentinel/sentinel.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="commands\clear.cpp" />
     <ClCompile Include="commands\exit.cpp" />
     <ClCompile Include="console.cpp" />
     <ClCompile Include="command_dispatcher.cpp" />
