--- a/sentinel/sentinel.vcxproj
+++ b/sentinel/sentinel.vcxproj
@@ -131,12 +131,14 @@
     <ClCompile Include="commands\exit.cpp" />
     <ClCompile Include="console.cpp" />
     <ClCompile Include="command_dispatcher.cpp" />
+    <ClCompile Include="modules\wifi.cpp" />
     <ClCompile Include="sentinel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="commands\commands.h" />
     <ClInclude Include="console.h" />
     <ClInclude Include="command_dispatcher.h" />
+    <ClInclude Include="Modules\modules.h" />
     <ClInclude Include="package.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
