Refactor command dispatch and add Bluetooth module
Refactored the `dispatch` method in `CommandDispatcher` to accept a
single `std::string` argument, simplifying command processing. Updated
related method signatures and types to use `std::string` instead of
`std::vector<std::string>`.

Added the Bluetooth module, including its implementation in
`bluetooth.cpp` and its declaration in `modules.h`. Updated
`sentinel.cpp` to include the Bluetooth module and modified the error
message to indicate "Invalid input".

Other changes include adding `#include "console.h"` to
`command_dispatcher.cpp`, updating the command registration in
`wifi_module`, and adding `modules\bluetooth.cpp` to the project file
`sentinel.vcxproj`.

--- a/sentinel/sentinel.vcxproj
+++ b/sentinel/sentinel.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="commands\exit.cpp" />
     <ClCompile Include="console.cpp" />
     <ClCompile Include="command_dispatcher.cpp" />
+    <ClCompile Include="modules\bluetooth.cpp" />
     <ClCompile Include="modules\wifi.cpp" />
     <ClCompile Include="sentinel.cpp" />
   </ItemGroup>
